<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_recipe_name"
                android:hint="@string/hint_recipe_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_recipe_hashtags"
                android:hint="@string/hint_recipe_hashtag"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Meal category -->
    <LinearLayout
        android:id="@+id/container_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_meal"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Meal drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_meal"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Time category -->
    <LinearLayout
        android:id="@+id/container_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_time"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_recipe_time"
                android:hint="@string/hint_recipe_time"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for minutes (min) -->
            <TextView
                android:id="@+id/label_time_units"
                android:text="@string/unit_recipe_time"
                style="@style/EditorUnitsStyle"
                android:layout_marginRight="15dp"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Ingredients category -->
    <LinearLayout
        android:id="@+id/container_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Label -->
        <TextView
            android:text="@string/category_ingredients"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_ingredients"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_ingredients"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="6"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:background="@drawable/edit_text_background"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Prepration category -->
    <LinearLayout
        android:id="@+id/container_preparation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Label -->
        <TextView
            android:text="@string/category_preparation"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"/>
        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_preparation"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_preparation"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="6"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:background="@drawable/edit_text_background"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
    </ScrollView>